web/style.css
body {
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #F7F8F1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
    
}
sidebar{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
    order:0;
}
h1 {
    color: white;
    text-align: center;
    background-color: black;
 
}
h2 {
    color: white;
    text-align: center;
    background-color: black;
    margin-top: 2px;
    margin-bottom: 2px;
   

}
h3 {
    color: white;
    text-align: center;
    background-color: black;
    margin-top: 2px;
    margin-bottom: 2px;
    
  
}
p {
    color: white;
    font-size: 1.3em;
    background-color: black;
    margin-top: 4px;
    margin-bottom: 4px;
    line-height: 120%;
    

}
ul {
    color: white;
    font-size: 1.3em;
    background-color: rgba(00, 00, 00, 1);
    



}
li {
    text-align: justify;
 
    

}
div {
    height:98vh;
    overflow-y: scroll;
    height: 600px;
    width: 800px;
   

}
div.text {
    height:98vh;
    overflow-y: scroll;
    height: 200px;
    width: 400px;
   

}
div.texts-filtering-box{
    height:98vh;
    overflow-y: scroll;
    height: 200px;
    width: 200px;
   

}
div.texts-filtering-container{
    height:98vh;
    overflow-y: scroll;
    height: 200px;
    width: 200px;
   

}
div.attributes-filtering-container{
    height:98vh;
    overflow-y: scroll;
    height: 200px;
    width: 200px;
   

}
div.attributes-filtering-box{
    height:98vh;
    overflow-y: scroll;
    height: 200px;
    width: 200px;
   

}

.cover {
    background: url("resize_front-cover-2.jpg");
    background-repeat: no-repeat;
    background-size: 800px, 800px;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;

    
   

}
.open {
    background: url("resize_open-book-2.jpg");
    background-repeat: no-repeat;
     background-size: 800px, 800px;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;
   


}
.closed {
    background: url("resize_back-cover-2.jpg");
    background-repeat: no-repeat;
  background-size: 790px, 900px;
     display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;
  
}
.menu {
    position: relative;
    transform: rotate(90deg);
    font-size: 1.5em;
    text-align: center;
    background-color: darkgreen;
  display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: center;
  order: 2;
    

}
text{
    order: 0;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: flex-start;
}
corpus{
background: url("resize_open-book-2.jpg");
    background-repeat: no-repeat;
     background-size: 800px, 800px;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: center;
  order: 1;
    
}
texts-filtering-box{
   order: 1;
  display: block; 
   height: 100px;
   width: 100px;
  
    
}
attributes-filtering-box{
   order: 2;
  display: block;
height: 100px;
   width: 100px;
  
    
}
a:link {
    color: gold;
}
a:visited {
    color: white;
}

